# CICD-Wizard

./: .dockerignore  .gitignore  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
cicd_wizard/: __init__.py  app.py
cicd_wizard/application/: __init__.py  generate_yaml.py
cicd_wizard/config/: config.py  log.py
cicd_wizard/domain/models/: __init__.py  wizard.py
cicd_wizard/entrypoints/: __init__.py  router.py
cicd_wizard/service/generator/: __init__.py  jenkins.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: AdditionalSection.js  AdditionalSection.tsx  BuildSection.js  BuildSection.tsx  DeploySection.js  DeploySection.tsx  PreviewModal.js  PreviewModal.tsx  ProjectSection.js  ProjectSection.tsx
frontend/src/services/: api.js  api.ts
infra/docker/: node.Dockerfile  python.Dockerfile
infra/kubernetes/: ingress.yaml  service.yaml  statefulset.yaml
infra/nginx/: nginx.conf
templates/: gitlab.j2  jenkins.j2
