[project]
name = "cicd-wizard"
version = "0.1.0"
description = "Generate CI/CD configurations for various services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.1.0",
    "gunicorn>=25.1.0",
]

